versioned_docs/version-22.10/monitoring/basic-objects/customization.md
---
id: customization
title: Customizing the use of Centreon
---

You can optimize the use of Centreon by using the following customization features:

## Switch to dark mode

When you first connect to the interface, Centreon is displayed in light mode by default.

On the banner, click on the profile icon and use the switch button to turn on the dark mode.
Next time you connect to the interface, the mode you previously selected remains on.

- Light mode:

![image](../../assets/getting-started/menu_light_mode.png)

- Dark mode:

![image](../../assets/getting-started/menu_dark_mode.png)

## Change the user interface language

On the banner, click on the profile icon, then click on **Edit profile**:

![image](../../assets/getting-started/menu_edit_profile.png)

In the language select box, choose your language:

![image](../../assets/getting-started/change_language.png)

Then click on **Save**. Your interface is now translated.

> If your language doesn't appear in the available language list, you can help the Centreon community to translate the web interface. For more details go to [How to translate Centreon](../../developer/developer-translate-centreon.md).

## Reset your password

### Reset your password before expiration

When your password is going to expire in the next 7 days, an orange dot appears in the banner on the right
next to the profile icon:

![image](../../assets/administration/password_will_expire.png)

Click on **Edit profile**, then change your password:

![image](../../assets/administration/password_expiration.png)

### Reset your password when expired

If you have not changed your password before it expires, you will be redirected after login
to a dedicated page where you can update it:

![image](../../assets/administration/password_expired.png)

Fill in your current password, define a new one and then click on **Reset Password**.
